--- a/iAngel/index.html
+++ b/iAngel/index.html
@@ -8,7 +8,7 @@
     <link href="res/css/bootstrap-combined.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="app.css" type="text/css" />
     <script src="Scripts/angular.min.js"></script>
-    <script src="lib/iAngle.js"></script>
+    <script src="lib/iAngel.js"></script>
     <script src="src/clazz.js"></script>
     <script src="app.js"></script>
 </head>
